# chatgpt-connector-deepwiki

./: .env  .env.example  .gitignore  README.md  client.py  deployment-plan.md  pyproject.toml
chatgpt_connector_deepwiki.egg-info/: PKG-INFO  SOURCES.txt
mcp-server-deepwiki-gpt/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.jsonc  wrangler.jsonc.example  wrangler.toml
mcp-server-deepwiki-gpt/src/: deepwiki-data.ts  github-handler.ts  index.ts  utils.ts
my-mcp-server-auth/: .dev.vars.example  README.md  package-lock.json  wrangler.jsonc
test/: client-test.py  test-deepwiki-mcp.py
